# template_cpp_lessons

./: .gitignore  CMakeLists.txt  README.md  settings.cmake
.cmake/: settings.cmake  settings.json
lesson_template/: CMakeLists.txt  README.md
lesson_template/example_template/: main.cpp
lib/: CMakeLists.txt
